Add notebooks to tests

--- a/notebooks/Classification_Evaluator_Examples.ipynb
+++ b/notebooks/Classification_Evaluator_Examples.ipynb
@@ -17,17 +17,30 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:42.929082Z",
+     "iopub.status.busy": "2024-02-22T02:03:42.928365Z",
+     "iopub.status.idle": "2024-02-22T02:03:43.935221Z",
+     "shell.execute_reply": "2024-02-22T02:03:43.933935Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capymoa_root: /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/CapyMOA/src/capymoa\n",
-      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/CapyMOA/src/capymoa/jar/moa.jar\n",
+      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
+      "MOA jar path location (config.ini): /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
-      "JAVA_HOME: /Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
@@ -53,7 +66,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "195b466e-c3c5-4288-81db-4fd562798011",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:43.940077Z",
+     "iopub.status.busy": "2024-02-22T02:03:43.939680Z",
+     "iopub.status.idle": "2024-02-22T02:03:43.946756Z",
+     "shell.execute_reply": "2024-02-22T02:03:43.945862Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -85,7 +105,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "29b0a5d9-1f26-4dbe-bb39-158d9521e90c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:43.950812Z",
+     "iopub.status.busy": "2024-02-22T02:03:43.950436Z",
+     "iopub.status.idle": "2024-02-22T02:03:43.967800Z",
+     "shell.execute_reply": "2024-02-22T02:03:43.966917Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -132,7 +159,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "dd73c09c-0e2f-4adc-90bf-25c85adc5305",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:43.972047Z",
+     "iopub.status.busy": "2024-02-22T02:03:43.971453Z",
+     "iopub.status.idle": "2024-02-22T02:03:43.979211Z",
+     "shell.execute_reply": "2024-02-22T02:03:43.978344Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -173,7 +207,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "64458fd0-1f88-48c2-a532-b19b48ce9472",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:43.983242Z",
+     "iopub.status.busy": "2024-02-22T02:03:43.982905Z",
+     "iopub.status.idle": "2024-02-22T02:03:43.990637Z",
+     "shell.execute_reply": "2024-02-22T02:03:43.989773Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -214,7 +255,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "6ea3c19f-4ef8-4289-9af0-9949936c1f77",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:43.994646Z",
+     "iopub.status.busy": "2024-02-22T02:03:43.994275Z",
+     "iopub.status.idle": "2024-02-22T02:03:44.002772Z",
+     "shell.execute_reply": "2024-02-22T02:03:44.001857Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -255,7 +303,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "dcd3a902-6271-463d-a4fc-04f04bb1a723",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:44.007227Z",
+     "iopub.status.busy": "2024-02-22T02:03:44.006688Z",
+     "iopub.status.idle": "2024-02-22T02:03:44.015698Z",
+     "shell.execute_reply": "2024-02-22T02:03:44.014743Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -302,7 +357,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "b3741d4b-46fb-44f8-9adc-4c4734f0733d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:44.020309Z",
+     "iopub.status.busy": "2024-02-22T02:03:44.019877Z",
+     "iopub.status.idle": "2024-02-22T02:03:44.030464Z",
+     "shell.execute_reply": "2024-02-22T02:03:44.029268Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -348,7 +410,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "c24c1547-371a-47d3-adbd-f873bd4e461e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:44.035440Z",
+     "iopub.status.busy": "2024-02-22T02:03:44.034790Z",
+     "iopub.status.idle": "2024-02-22T02:03:44.045373Z",
+     "shell.execute_reply": "2024-02-22T02:03:44.044368Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -389,7 +458,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "6f940410-8866-448c-825c-5e06ba61ed54",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:44.050002Z",
+     "iopub.status.busy": "2024-02-22T02:03:44.049529Z",
+     "iopub.status.idle": "2024-02-22T02:03:44.062685Z",
+     "shell.execute_reply": "2024-02-22T02:03:44.061612Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -428,7 +504,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "0b1b7972-5175-40a3-97bc-edd29aeabe8d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:44.067311Z",
+     "iopub.status.busy": "2024-02-22T02:03:44.066825Z",
+     "iopub.status.idle": "2024-02-22T02:03:44.081779Z",
+     "shell.execute_reply": "2024-02-22T02:03:44.080679Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -475,7 +558,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "a1a3f50c-fa77-4bdc-8105-597512670034",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:44.086381Z",
+     "iopub.status.busy": "2024-02-22T02:03:44.085910Z",
+     "iopub.status.idle": "2024-02-22T02:03:44.116809Z",
+     "shell.execute_reply": "2024-02-22T02:03:44.115905Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -686,7 +776,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "73b739b9-60dc-4975-afb9-5d74e8abad99",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:44.121535Z",
+     "iopub.status.busy": "2024-02-22T02:03:44.121139Z",
+     "iopub.status.idle": "2024-02-22T02:03:44.142154Z",
+     "shell.execute_reply": "2024-02-22T02:03:44.141280Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -858,7 +955,14 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "eb7c4331-b390-423d-b645-3cbae4752950",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:44.146715Z",
+     "iopub.status.busy": "2024-02-22T02:03:44.146487Z",
+     "iopub.status.idle": "2024-02-22T02:03:46.198978Z",
+     "shell.execute_reply": "2024-02-22T02:03:46.197892Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1134,7 +1238,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "9f202299-317d-45db-a62d-747769a958a8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-22T02:03:46.203406Z",
+     "iopub.status.busy": "2024-02-22T02:03:46.203092Z",
+     "iopub.status.idle": "2024-02-22T02:03:47.319098Z",
+     "shell.execute_reply": "2024-02-22T02:03:47.318065Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1212,29 +1323,15 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "e2e98a8c-acff-480c-9c1d-f21262bc5cfa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ARFClassifier, accuracy.get(): 0.847153, evaluator.accuracy(): 84.7153\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "     1.0   2.0  \n",
-       "1.0  831     7  \n",
-       "2.0  146    17  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "skip-execution"
+    ]
+   },
+   "outputs": [],
    "source": [
+    "#TODO: This cell is skipped because `CSV` files are no longer downloaded. In\n",
+    "# the future this will need to be fixed.\n",
     "## River imports\n",
     "from river import stream\n",
     "from river import metrics\n",
@@ -1329,7 +1426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
