--- a/notebooks/Data_Reading.ipynb
+++ b/notebooks/Data_Reading.ipynb
@@ -24,10 +24,10 @@
    "id": "f6c3fc32-efa6-4238-a6f6-7e84aed4973d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:40:58.387608Z",
-     "iopub.status.busy": "2024-01-10T21:40:58.386983Z",
-     "iopub.status.idle": "2024-01-10T21:40:59.122115Z",
-     "shell.execute_reply": "2024-01-10T21:40:59.121502Z"
+     "iopub.execute_input": "2024-02-16T03:57:38.173084Z",
+     "iopub.status.busy": "2024-02-16T03:57:38.172194Z",
+     "iopub.status.idle": "2024-02-16T03:57:38.613641Z",
+     "shell.execute_reply": "2024-02-16T03:57:38.613310Z"
     },
     "scrolled": true
    },
@@ -36,10 +36,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
-      "MOA jar path location (config.ini): jar/moa.jar\n",
+      "capymoa_root: /home/anton/github.com/tachyonicClock/CapyMOA/src/capymoa\n",
+      "MOA jar path location (config.ini): /home/anton/github.com/tachyonicClock/CapyMOA/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
-      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
+      "JAVA_HOME: /usr/lib64/jvm/java\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
@@ -81,10 +81,10 @@
    "id": "22525924-b607-4a45-8483-050a211fb6ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:40:59.124467Z",
-     "iopub.status.busy": "2024-01-10T21:40:59.124254Z",
-     "iopub.status.idle": "2024-01-10T21:41:01.188291Z",
-     "shell.execute_reply": "2024-01-10T21:41:01.187753Z"
+     "iopub.execute_input": "2024-02-16T03:57:38.615836Z",
+     "iopub.status.busy": "2024-02-16T03:57:38.615366Z",
+     "iopub.status.idle": "2024-02-16T03:57:39.756831Z",
+     "shell.execute_reply": "2024-02-16T03:57:39.756494Z"
     }
    },
    "outputs": [
@@ -258,8 +258,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 4.11 s, sys: 47.1 ms, total: 4.16 s\n",
-      "Wall time: 2.06 s\n"
+      "CPU times: user 2.7 s, sys: 64.7 ms, total: 2.77 s\n",
+      "Wall time: 1.14 s\n"
      ]
     }
    ],
@@ -289,10 +289,10 @@
    "id": "92e7073d-9fa8-4fe8-8a4d-78583170b6e0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:01.190116Z",
-     "iopub.status.busy": "2024-01-10T21:41:01.189985Z",
-     "iopub.status.idle": "2024-01-10T21:41:01.546203Z",
-     "shell.execute_reply": "2024-01-10T21:41:01.545655Z"
+     "iopub.execute_input": "2024-02-16T03:57:39.758409Z",
+     "iopub.status.busy": "2024-02-16T03:57:39.758041Z",
+     "iopub.status.idle": "2024-02-16T03:57:39.961279Z",
+     "shell.execute_reply": "2024-02-16T03:57:39.960982Z"
     }
    },
    "outputs": [
@@ -466,8 +466,8 @@
      "output_type": "stream",
      "text": [
       "[45312.0, 81.97777777777779, 63.596765274097066, -17.706821480406372, 63.203266787658805]\n",
-      "CPU times: user 945 ms, sys: 25.7 ms, total: 970 ms\n",
-      "Wall time: 353 ms\n"
+      "CPU times: user 555 ms, sys: 9.86 ms, total: 564 ms\n",
+      "Wall time: 201 ms\n"
      ]
     }
    ],
@@ -499,10 +499,10 @@
    "id": "00b77830-c8f9-4bae-8d7e-bf064900b806",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:01.547993Z",
-     "iopub.status.busy": "2024-01-10T21:41:01.547863Z",
-     "iopub.status.idle": "2024-01-10T21:41:01.728842Z",
-     "shell.execute_reply": "2024-01-10T21:41:01.728406Z"
+     "iopub.execute_input": "2024-02-16T03:57:39.962824Z",
+     "iopub.status.busy": "2024-02-16T03:57:39.962685Z",
+     "iopub.status.idle": "2024-02-16T03:57:40.075830Z",
+     "shell.execute_reply": "2024-02-16T03:57:40.075512Z"
     }
    },
    "outputs": [
@@ -657,13 +657,42 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "b9ea4b89",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-16T03:57:40.077118Z",
+     "iopub.status.busy": "2024-02-16T03:57:40.076986Z",
+     "iopub.status.idle": "2024-02-16T03:57:40.931319Z",
+     "shell.execute_reply": "2024-02-16T03:57:40.930590Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in /home/anton/miniconda3/envs/capymoa/lib/python3.10/site-packages (1.4.0)\r\n",
+      "Requirement already satisfied: numpy<2.0,>=1.19.5 in /home/anton/miniconda3/envs/capymoa/lib/python3.10/site-packages (from scikit-learn) (1.26.4)\r\n",
+      "Requirement already satisfied: scipy>=1.6.0 in /home/anton/miniconda3/envs/capymoa/lib/python3.10/site-packages (from scikit-learn) (1.12.0)\r\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /home/anton/miniconda3/envs/capymoa/lib/python3.10/site-packages (from scikit-learn) (1.3.2)\r\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/anton/miniconda3/envs/capymoa/lib/python3.10/site-packages (from scikit-learn) (3.3.0)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "8fa8c3a2-86b5-4976-a6ff-e67b37510209",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:01.730689Z",
-     "iopub.status.busy": "2024-01-10T21:41:01.730552Z",
-     "iopub.status.idle": "2024-01-10T21:41:01.956386Z",
-     "shell.execute_reply": "2024-01-10T21:41:01.955838Z"
+     "iopub.execute_input": "2024-02-16T03:57:40.934039Z",
+     "iopub.status.busy": "2024-02-16T03:57:40.933811Z",
+     "iopub.status.idle": "2024-02-16T03:57:41.166379Z",
+     "shell.execute_reply": "2024-02-16T03:57:41.166023Z"
     }
    },
    "outputs": [
@@ -689,14 +718,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "310ccc63-c65a-4b35-a9d6-a71030945b3d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:01.958276Z",
-     "iopub.status.busy": "2024-01-10T21:41:01.958079Z",
-     "iopub.status.idle": "2024-01-10T21:41:01.978770Z",
-     "shell.execute_reply": "2024-01-10T21:41:01.978324Z"
+     "iopub.execute_input": "2024-02-16T03:57:41.167751Z",
+     "iopub.status.busy": "2024-02-16T03:57:41.167555Z",
+     "iopub.status.idle": "2024-02-16T03:57:41.181942Z",
+     "shell.execute_reply": "2024-02-16T03:57:41.181621Z"
     }
    },
    "outputs": [
@@ -1192,14 +1221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a417e999-c5c0-4004-99bb-da44ddfd6f6a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:01.980888Z",
-     "iopub.status.busy": "2024-01-10T21:41:01.980750Z",
-     "iopub.status.idle": "2024-01-10T21:41:02.598365Z",
-     "shell.execute_reply": "2024-01-10T21:41:02.597896Z"
+     "iopub.execute_input": "2024-02-16T03:57:41.183207Z",
+     "iopub.status.busy": "2024-02-16T03:57:41.183076Z",
+     "iopub.status.idle": "2024-02-16T03:57:41.555173Z",
+     "shell.execute_reply": "2024-02-16T03:57:41.554842Z"
     }
    },
    "outputs": [
@@ -1209,7 +1238,13 @@
      "text": [
       "X shape: (45312, 6)\n",
       "y shape: (45312,)\n",
-      "['period', 'nswprice', 'nswdemand', 'vicprice', 'vicdemand', 'transfer', 'class']\n",
+      "['period', 'nswprice', 'nswdemand', 'vicprice', 'vicdemand', 'transfer', 'class']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "@relation Elec\n",
       "\n",
       "@attribute period numeric\n",
@@ -1267,14 +1302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4f679ac9-b80c-4691-85ec-a73a079506ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:02.600283Z",
-     "iopub.status.busy": "2024-01-10T21:41:02.600148Z",
-     "iopub.status.idle": "2024-01-10T21:41:03.376883Z",
-     "shell.execute_reply": "2024-01-10T21:41:03.376418Z"
+     "iopub.execute_input": "2024-02-16T03:57:41.556730Z",
+     "iopub.status.busy": "2024-02-16T03:57:41.556572Z",
+     "iopub.status.idle": "2024-02-16T03:57:42.006718Z",
+     "shell.execute_reply": "2024-02-16T03:57:42.006419Z"
     }
    },
    "outputs": [
@@ -1282,13 +1317,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<capymoa.stream.stream.Instance object at 0x7f75573a12b0>\n",
-      "<capymoa.stream.stream.Instance object at 0x7f75573a1910>\n",
-      "<capymoa.stream.stream.Instance object at 0x7f75573a12b0>\n",
+      "<capymoa.stream.stream.Instance object at 0x7fd666c8d0f0>\n",
+      "<capymoa.stream.stream.Instance object at 0x7fd6802759c0>\n",
+      "<capymoa.stream.stream.Instance object at 0x7fd63cd6f760>\n",
       "restarting stream...\n",
-      "<capymoa.stream.stream.Instance object at 0x7f75573a1910>\n",
-      "<capymoa.stream.stream.Instance object at 0x7f75573a12b0>\n",
-      "<capymoa.stream.stream.Instance object at 0x7f75573a1910>\n",
+      "<capymoa.stream.stream.Instance object at 0x7fd63cd6c0d0>\n",
+      "<capymoa.stream.stream.Instance object at 0x7fd63cd6f760>\n",
+      "<capymoa.stream.stream.Instance object at 0x7fd63cd6c0d0>\n",
       "Not a moa_stream, a numpy read file\n",
       "Read 45312 instances, total = 45312\n"
      ]
@@ -1350,14 +1385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d5f7e413-00ae-4ced-9792-2a4d37a99d6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:03.378766Z",
-     "iopub.status.busy": "2024-01-10T21:41:03.378584Z",
-     "iopub.status.idle": "2024-01-10T21:41:05.082396Z",
-     "shell.execute_reply": "2024-01-10T21:41:05.081956Z"
+     "iopub.execute_input": "2024-02-16T03:57:42.008032Z",
+     "iopub.status.busy": "2024-02-16T03:57:42.007891Z",
+     "iopub.status.idle": "2024-02-16T03:57:42.966192Z",
+     "shell.execute_reply": "2024-02-16T03:57:42.965866Z"
     }
    },
    "outputs": [
@@ -1501,7 +1536,7 @@
        "8                    63.628763  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,14 +1579,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "283e00c0-53f5-435b-b97f-1bed8da0e61b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:05.084597Z",
-     "iopub.status.busy": "2024-01-10T21:41:05.084418Z",
-     "iopub.status.idle": "2024-01-10T21:41:05.088830Z",
-     "shell.execute_reply": "2024-01-10T21:41:05.088290Z"
+     "iopub.execute_input": "2024-02-16T03:57:42.967504Z",
+     "iopub.status.busy": "2024-02-16T03:57:42.967366Z",
+     "iopub.status.idle": "2024-02-16T03:57:42.970187Z",
+     "shell.execute_reply": "2024-02-16T03:57:42.969921Z"
     }
    },
    "outputs": [
@@ -1559,7 +1594,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<capymoa.stream.stream.Instance object at 0x7f75573bfb20>\n"
+      "<capymoa.stream.stream.Instance object at 0x7fd63cd6ee90>\n"
      ]
     },
     {
@@ -1568,7 +1603,7 @@
        "<java object 'moa.streams.ArffFileStream'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,14 +1618,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "380f3ab4-49fd-4653-8ffa-d20948348f81",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:05.090806Z",
-     "iopub.status.busy": "2024-01-10T21:41:05.090619Z",
-     "iopub.status.idle": "2024-01-10T21:41:05.685637Z",
-     "shell.execute_reply": "2024-01-10T21:41:05.685137Z"
+     "iopub.execute_input": "2024-02-16T03:57:42.971244Z",
+     "iopub.status.busy": "2024-02-16T03:57:42.971137Z",
+     "iopub.status.idle": "2024-02-16T03:57:43.311135Z",
+     "shell.execute_reply": "2024-02-16T03:57:43.310803Z"
     }
    },
    "outputs": [
@@ -1598,7 +1633,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<capymoa.stream.stream.Instance object at 0x7f762c6d37f0>\n",
+      "<capymoa.stream.stream.Instance object at 0x7fd6802756c0>\n",
       "Not a moa_stream, a numpy read file\n"
      ]
     }
@@ -1629,14 +1664,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2e85947b-d712-4da7-b65f-7786a1ad1ee8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:05.687513Z",
-     "iopub.status.busy": "2024-01-10T21:41:05.687380Z",
-     "iopub.status.idle": "2024-01-10T21:41:17.055155Z",
-     "shell.execute_reply": "2024-01-10T21:41:17.054632Z"
+     "iopub.execute_input": "2024-02-16T03:57:43.312628Z",
+     "iopub.status.busy": "2024-02-16T03:57:43.312479Z",
+     "iopub.status.idle": "2024-02-16T03:57:50.219925Z",
+     "shell.execute_reply": "2024-02-16T03:57:50.219361Z"
     }
    },
    "outputs": [
@@ -1644,8 +1679,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.1 s, sys: 37.6 ms, total: 12.2 s\n",
-      "Wall time: 11.4 s\n"
+      "CPU times: user 7.35 s, sys: 39.3 ms, total: 7.39 s\n",
+      "Wall time: 6.9 s\n"
      ]
     }
    ],
@@ -1667,14 +1702,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ae79c509-e1b6-4f2b-9a10-371a45634296",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:17.057019Z",
-     "iopub.status.busy": "2024-01-10T21:41:17.056870Z",
-     "iopub.status.idle": "2024-01-10T21:41:28.578868Z",
-     "shell.execute_reply": "2024-01-10T21:41:28.578402Z"
+     "iopub.execute_input": "2024-02-16T03:57:50.221827Z",
+     "iopub.status.busy": "2024-02-16T03:57:50.221704Z",
+     "iopub.status.idle": "2024-02-16T03:57:57.211303Z",
+     "shell.execute_reply": "2024-02-16T03:57:57.210833Z"
     }
    },
    "outputs": [
@@ -1682,8 +1717,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.9 s, sys: 39.8 ms, total: 11.9 s\n",
-      "Wall time: 11.5 s\n"
+      "CPU times: user 7.32 s, sys: 56.8 ms, total: 7.37 s\n",
+      "Wall time: 6.99 s\n"
      ]
     }
    ],
@@ -1728,7 +1763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
