--- a/notebooks/SSL_example.ipynb
+++ b/notebooks/SSL_example.ipynb
@@ -48,9 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Read the stream from a file. CSV files also work, but it is better to use ARFF files (especially if datasets are large). \n",
-    "rbf_arff_file_path = '../data/RBFm_100k.arff'\n",
-    "stream = stream_from_file(path_to_csv_or_arff=rbf_arff_file_path, class_index=-1)"
+    "from capymoa.datasets import RBFm_100k\n",
+    "# Capymoa has a number of datasets built into the library. They automatically download when called.\n",
+    "# It is simple to use your own datasets as well using `stream_from_file`\n",
+    "stream = RBFm_100k()"
    ]
   },
   {
@@ -1624,14 +1625,6 @@
     "\n",
     "plot_windowed_results(results_cl_100, results_cl_50, results_srp10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "496a3042-9b1c-453e-bfba-7349226e0dfa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1650,7 +1643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
