--- a/notebooks/Simple_NeuralNetwork.ipynb
+++ b/notebooks/Simple_NeuralNetwork.ipynb
@@ -33,10 +33,10 @@
      "start_time": "2023-12-03T08:38:57.307505Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:00:08.658295Z",
-     "iopub.status.busy": "2024-01-10T22:00:08.658024Z",
-     "iopub.status.idle": "2024-01-10T22:00:10.171851Z",
-     "shell.execute_reply": "2024-01-10T22:00:10.171311Z"
+     "iopub.execute_input": "2024-02-22T02:03:48.570399Z",
+     "iopub.status.busy": "2024-02-22T02:03:48.569619Z",
+     "iopub.status.idle": "2024-02-22T02:03:49.387808Z",
+     "shell.execute_reply": "2024-02-22T02:03:49.386686Z"
     }
    },
    "outputs": [
@@ -45,41 +45,54 @@
      "output_type": "stream",
      "text": [
       "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
-      "MOA jar path location (config.ini): jar/moa.jar\n",
+      "MOA jar path location (config.ini): /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
       "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n",
-      "x: [0.       0.056443 0.439155 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.021277 0.051699 0.415055 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.042553 0.051489 0.385004 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.06383  0.045485 0.314639 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.085106 0.042482 0.251116 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.106383 0.041161 0.207528 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.12766  0.041161 0.171824 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.148936 0.041161 0.152782 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.170213 0.041161 0.13493  0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.191489 0.041161 0.140583 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.212766 0.044374 0.168997 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.234043 0.049868 0.212437 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.255319 0.051489 0.298721 0.003467 0.422915 0.414912], y: 1.0\n",
-      "x: [0.276596 0.042482 0.39036  0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.297872 0.040861 0.402261 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.319149 0.040711 0.462214 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.340426 0.040861 0.488248 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.361702 0.040711 0.493306 0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.382979 0.041041 0.53258  0.003467 0.422915 0.414912], y: 0.0\n",
-      "x: [0.404255 0.041161 0.546415 0.003467 0.422915 0.414912], y: 0.0\n"
+      "JVM args: ['-Xmx8g', '-Xss10M']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: [0.       0.056443 0.439155 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.021277 0.051699 0.415055 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.042553 0.051489 0.385004 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.06383  0.045485 0.314639 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.085106 0.042482 0.251116 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.106383 0.041161 0.207528 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.12766  0.041161 0.171824 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.148936 0.041161 0.152782 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.170213 0.041161 0.13493  0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.191489 0.041161 0.140583 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.212766 0.044374 0.168997 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.234043 0.049868 0.212437 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.255319 0.051489 0.298721 0.003467 0.422915 0.414912], y: 1\n",
+      "x: [0.276596 0.042482 0.39036  0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.297872 0.040861 0.402261 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.319149 0.040711 0.462214 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.340426 0.040861 0.488248 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.361702 0.040711 0.493306 0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.382979 0.041041 0.53258  0.003467 0.422915 0.414912], y: 0\n",
+      "x: [0.404255 0.041161 0.546415 0.003467 0.422915 0.414912], y: 0\n"
      ]
     }
    ],
    "source": [
     "from capymoa.stream import stream_from_file\n",
+    "from capymoa.datasets import ElectricityTiny\n",
     "\n",
     "DATA_PATH = \"../data/\"\n",
     "\n",
     "## Opening a file as a stream\n",
-    "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
+    "elec_stream = ElectricityTiny()\n",
     "\n",
     "elec_stream.restart()\n",
     "i = 0\n",
@@ -100,10 +113,10 @@
      "start_time": "2023-12-03T08:39:01.477002Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:00:10.173860Z",
-     "iopub.status.busy": "2024-01-10T22:00:10.173651Z",
-     "iopub.status.idle": "2024-01-10T22:00:10.178665Z",
-     "shell.execute_reply": "2024-01-10T22:00:10.178033Z"
+     "iopub.execute_input": "2024-02-22T02:03:49.391840Z",
+     "iopub.status.busy": "2024-02-22T02:03:49.391537Z",
+     "iopub.status.idle": "2024-02-22T02:03:49.399303Z",
+     "shell.execute_reply": "2024-02-22T02:03:49.398473Z"
     }
    },
    "outputs": [
@@ -114,17 +127,17 @@
       "Number of classes: 2\n",
       "Number of features/attributes: 6\n",
       "    @attribute period numeric\n",
-      "    1.0\n",
+      "    0.659574\n",
       "    @attribute nswprice numeric\n",
-      "    0.050679\n",
+      "    0.10475\n",
       "    @attribute nswdemand numeric\n",
-      "    0.288753\n",
+      "    0.543737\n",
       "    @attribute vicprice numeric\n",
-      "    0.003542\n",
+      "    0.003467\n",
       "    @attribute vicdemand numeric\n",
-      "    0.355256\n",
+      "    0.422915\n",
       "    @attribute transfer numeric\n",
-      "    0.23114\n"
+      "    0.414912\n"
      ]
     }
    ],
@@ -165,10 +178,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:00:10.180636Z",
-     "iopub.status.busy": "2024-01-10T22:00:10.180456Z",
-     "iopub.status.idle": "2024-01-10T22:00:11.226883Z",
-     "shell.execute_reply": "2024-01-10T22:00:11.226290Z"
+     "iopub.execute_input": "2024-02-22T02:03:49.403309Z",
+     "iopub.status.busy": "2024-02-22T02:03:49.403048Z",
+     "iopub.status.idle": "2024-02-22T02:03:50.638799Z",
+     "shell.execute_reply": "2024-02-22T02:03:50.637131Z"
     }
    },
    "outputs": [
@@ -223,10 +236,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:00:11.229130Z",
-     "iopub.status.busy": "2024-01-10T22:00:11.228868Z",
-     "iopub.status.idle": "2024-01-10T22:04:19.880471Z",
-     "shell.execute_reply": "2024-01-10T22:04:19.880073Z"
+     "iopub.execute_input": "2024-02-22T02:03:50.645058Z",
+     "iopub.status.busy": "2024-02-22T02:03:50.644241Z",
+     "iopub.status.idle": "2024-02-22T02:03:55.466245Z",
+     "shell.execute_reply": "2024-02-22T02:03:55.465470Z"
     }
    },
    "outputs": [
@@ -247,63 +260,32 @@
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_76258/3342350797.py:21: DeprecationWarning: an integer is required (got type float).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
-      "  y = torch.tensor(instance.y(), dtype=torch.long)\n"
+      "Accuracy at 500 : 53.400000000000006\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 1000 : 58.5\n",
-      "Accuracy at 2000 : 63.24999999999999\n",
-      "Accuracy at 3000 : 62.9\n",
-      "Accuracy at 4000 : 63.74999999999999\n",
-      "Accuracy at 5000 : 64.3\n",
-      "Accuracy at 6000 : 64.28333333333333\n",
-      "Accuracy at 7000 : 64.1\n",
-      "Accuracy at 8000 : 64.17500000000001\n",
-      "Accuracy at 9000 : 64.67777777777778\n",
-      "Accuracy at 10000 : 65.09\n",
-      "Accuracy at 11000 : 65.26363636363637\n",
-      "Accuracy at 12000 : 65.58333333333334\n",
-      "Accuracy at 13000 : 65.93846153846154\n",
-      "Accuracy at 14000 : 66.64285714285715\n",
-      "Accuracy at 15000 : 67.16666666666666\n",
-      "Accuracy at 16000 : 67.325\n",
-      "Accuracy at 17000 : 67.65882352941176\n",
-      "Accuracy at 18000 : 68.12222222222222\n",
-      "Accuracy at 19000 : 68.71052631578948\n",
-      "Accuracy at 20000 : 69.155\n",
-      "Accuracy at 21000 : 69.18095238095238\n",
-      "Accuracy at 22000 : 69.58181818181818\n",
-      "Accuracy at 23000 : 69.74782608695652\n",
-      "Accuracy at 24000 : 70.0\n",
-      "Accuracy at 25000 : 70.172\n",
-      "Accuracy at 26000 : 70.33076923076923\n",
-      "Accuracy at 27000 : 70.63333333333334\n",
-      "Accuracy at 28000 : 70.76071428571429\n",
-      "Accuracy at 29000 : 70.78965517241379\n",
-      "Accuracy at 30000 : 70.86666666666666\n",
-      "Accuracy at 31000 : 71.00645161290322\n",
-      "Accuracy at 32000 : 70.671875\n",
-      "Accuracy at 33000 : 70.69090909090909\n",
-      "Accuracy at 34000 : 70.66764705882352\n",
-      "Accuracy at 35000 : 70.61428571428571\n",
-      "Accuracy at 36000 : 70.73888888888888\n",
-      "Accuracy at 37000 : 70.74324324324324\n",
-      "Accuracy at 38000 : 70.96578947368421\n",
-      "Accuracy at 39000 : 71.2051282051282\n",
-      "Accuracy at 40000 : 71.4125\n",
-      "Accuracy at 41000 : 71.52439024390243\n",
-      "Accuracy at 42000 : 71.68571428571428\n",
-      "Accuracy at 43000 : 71.85348837209303\n",
-      "Accuracy at 44000 : 71.88181818181818\n",
-      "Accuracy at 45000 : 71.95777777777778\n",
-      "Accuracy at 45312 : 71.9875529661017\n"
+      "Accuracy at 1000 : 59.199999999999996\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy at 1500 : 64.33333333333333\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy at 2000 : 63.449999999999996\n",
+      "Accuracy at 2000 : 63.449999999999996\n"
      ]
     }
    ],
@@ -314,7 +296,7 @@
     "evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
     "\n",
     "## Opening a file again to strat from the beginning\n",
-    "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
+    "elec_stream = ElectricityTiny()\n",
     "i = 0\n",
     "while elec_stream.has_more_instances():\n",
     "    i += 1\n",
@@ -328,7 +310,7 @@
     "        print(model)\n",
     "    \n",
     "    X = torch.tensor(instance.x(), dtype=torch.float32)\n",
-    "    y = torch.tensor(instance.y(), dtype=torch.long)\n",
+    "    y = torch.tensor(instance.y_index(), dtype=torch.long)\n",
     "    # set the device and add a dimension to the tensor\n",
     "    X, y = torch.unsqueeze(X.to(device), 0), torch.unsqueeze(y.to(device),0) \n",
     "    \n",
@@ -338,7 +320,7 @@
     "        prediction = torch.argmax(pred)\n",
     "\n",
     "    # update evaluator with predicted class\n",
-    "    evaluator.update(instance.y(), prediction)\n",
+    "    evaluator.update(instance.y(), instance.schema.get_value_for_index(prediction))\n",
     "  \n",
     "    # Compute prediction error\n",
     "    pred = model(X)\n",
@@ -349,7 +331,7 @@
     "    optimizer.step()\n",
     "    optimizer.zero_grad()\n",
     "    \n",
-    "    if i % 1000 == 0:\n",
+    "    if i % 500 == 0:\n",
     "        print(f'Accuracy at {i} : {evaluator.accuracy()}')\n",
     "    \n",
     "print(f'Accuracy at {i} : {evaluator.accuracy()}')"
@@ -409,6 +391,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "e87c2180",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tensorboard in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (2.16.2)\n",
+      "Requirement already satisfied: absl-py>=0.4 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (2.1.0)\n",
+      "Requirement already satisfied: grpcio>=1.48.2 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (1.62.0)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (3.5.2)\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (1.26.4)\n",
+      "Requirement already satisfied: protobuf!=4.24.0,>=3.19.6 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (4.25.3)\n",
+      "Requirement already satisfied: setuptools>=41.0.0 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (68.2.2)\n",
+      "Requirement already satisfied: six>1.9 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (1.16.0)\n",
+      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (0.7.2)\n",
+      "Requirement already satisfied: werkzeug>=1.0.1 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from tensorboard) (3.0.1)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in /local/scratch/antonlee/miniconda3/envs/capymoa/lib/python3.10/site-packages (from werkzeug>=1.0.1->tensorboard) (2.1.5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "8ec688a5b4af052f",
    "metadata": {
@@ -418,10 +428,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:04:19.882713Z",
-     "iopub.status.busy": "2024-01-10T22:04:19.882567Z",
-     "iopub.status.idle": "2024-01-10T22:04:19.941477Z",
-     "shell.execute_reply": "2024-01-10T22:04:19.939558Z"
+     "iopub.execute_input": "2024-02-22T02:03:55.469141Z",
+     "iopub.status.busy": "2024-02-22T02:03:55.468680Z",
+     "iopub.status.idle": "2024-02-22T02:03:55.527741Z",
+     "shell.execute_reply": "2024-02-22T02:03:55.526802Z"
     }
    },
    "outputs": [],
@@ -452,19 +462,39 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:04:19.948753Z",
-     "iopub.status.busy": "2024-01-10T22:04:19.948032Z",
-     "iopub.status.idle": "2024-01-10T22:04:55.688638Z",
-     "shell.execute_reply": "2024-01-10T22:04:55.688175Z"
+     "iopub.execute_input": "2024-02-22T02:03:55.532078Z",
+     "iopub.status.busy": "2024-02-22T02:03:55.531794Z",
+     "iopub.status.idle": "2024-02-22T02:03:59.139893Z",
+     "shell.execute_reply": "2024-02-22T02:03:59.138040Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_76258/552737021.py:21: DeprecationWarning: an integer is required (got type float).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
-      "  y = torch.tensor(instance.y(), dtype=torch.long)\n"
+      "Accuracy at 500 : 54.6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy at 1000 : 60.8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy at 1500 : 65.60000000000001\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy at 2000 : 64.45\n"
      ]
     }
    ],
@@ -475,7 +505,7 @@
     "evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
     "\n",
     "## Opening a file again to strat from the beginning\n",
-    "elec_stream = stream_from_file(path_to_csv_or_arff=DATA_PATH+\"electricity.csv\")\n",
+    "elec_stream = ElectricityTiny()\n",
     "i = 0\n",
     "while elec_stream.has_more_instances():\n",
     "    i += 1\n",
@@ -489,14 +519,14 @@
     "        print(model)\n",
     "    \n",
     "    X = torch.tensor(instance.x(), dtype=torch.float32)\n",
-    "    y = torch.tensor(instance.y(), dtype=torch.long)\n",
+    "    y = torch.tensor(instance.y_index(), dtype=torch.long)\n",
     "    # set the device and add a dimension to the tensor\n",
     "    X, y = torch.unsqueeze(X.to(device), 0), torch.unsqueeze(y.to(device),0) \n",
     "    \n",
     "    # turn off gradient collection for test\n",
     "    with torch.no_grad():\n",
     "        pred = model(X)\n",
-    "        prediction = torch.argmax(pred)\n",
+    "        prediction = instance.schema.get_value_for_index(torch.argmax(pred))\n",
     "\n",
     "    # update evaluator with predicted class\n",
     "    evaluator.update(instance.y(), prediction)\n",
@@ -510,7 +540,8 @@
     "    optimizer.step()\n",
     "    optimizer.zero_grad()\n",
     "    \n",
-    "    if i % 1000 == 0:\n",
+    "    if i % 500 == 0:\n",
+    "        print(f'Accuracy at {i} : {evaluator.accuracy()}')\n",
     "        writer.add_scalar(\"accuracy\", evaluator.accuracy(), i)\n",
     "    \n",
     "writer.add_scalar(\"accuracy\", evaluator.accuracy(), i)\n",
@@ -541,10 +572,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-01-10T22:04:55.690636Z",
-     "iopub.status.busy": "2024-01-10T22:04:55.690484Z",
-     "iopub.status.idle": "2024-01-10T22:04:55.695982Z",
-     "shell.execute_reply": "2024-01-10T22:04:55.695577Z"
+     "iopub.execute_input": "2024-02-22T02:03:59.143196Z",
+     "iopub.status.busy": "2024-02-22T02:03:59.142818Z",
+     "iopub.status.idle": "2024-02-22T02:03:59.147030Z",
+     "shell.execute_reply": "2024-02-22T02:03:59.146358Z"
     }
    },
    "outputs": [],
@@ -599,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
